# codingame-fall-2020

./: .gitignore  Cargo.toml  build.rs
src/: base.rs  input.rs  main.rs  player.rs  vec.rs
